base64 no link de download, e aplicando rotateY no vídeo user

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@
 .modal video{
     width: 100%;
 }
+.rotate_user{
+    transform: rotateY(180deg);
+}
 .controls{
     width: 100%;
     position: absolute;
